--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <p id="u278-9">&nbsp;</p>
      </div>
      <div class="shadow rgba-background rounded-corners clearfix grpelem" id="u309-10"><!-- content -->
-      <p>ЗАПИШИСЬ НА МАНИКЮР ДО <span id="u309-2">15</span> ЯНВАРЯ И ПОЛУЧИ</p>
-      <p id="u309-8"><span id="u309-5">СКИДКУ 15%</span><span id="u309-6"> </span><span id="u309-7">НА ПОСЛЕДУЮЩИЙ ВИЗИТ!</span></p>
+      <p>ЗАПИШИСЬ НА МАНИКЮР ДО <span id="u309-2">15</span> ФЕВРАЛЯ И ПОЛУЧИ</p>
+      <p id="u309-8"><span id="u309-5">СКИДКУ 10%</span><span id="u309-6"> </span><span id="u309-7">НА ПОСЛЕДУЮЩИЙ ВИЗИТ!</span></p>
      </div>
      <div class="clearfix grpelem" id="u315-4"><!-- content -->
       <p>Французский маникюр</p>
