--- a/phone/index.html
+++ b/phone/index.html
@@ -50,7 +50,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext anim_swing shadow rounded-corners transition clearfix grpelem" id="u2066-4" href="index.html#services"><!-- content --><p>УСЛУГИ</p></a>
      <a class="nonblock nontext anim_swing shadow rounded-corners transition clearfix grpelem" id="u2067-4" href="index.html#my-works"><!-- content --><p>МОИ РАБОТЫ</p></a>
      <div class="shadow rgba-background rounded-corners clearfix grpelem" id="u2069-9"><!-- content -->
-      <p>ЗАПИШИСЬ НА МАНИКЮР ДО <span id="u2069-2">15</span> ФЕВРАЛЯ И ПОЛУЧИ</p>
+      <p>ЗАПИШИСЬ НА МАНИКЮР ДО <span id="u2069-2">8</span> МАРТА И ПОЛУЧИ</p>
       <p><span id="u2069-5">СКИДКУ 10%</span> НА ПОСЛЕДУЮЩИЙ ВИЗИТ!</p>
      </div>
      <a class="nonblock nontext shadow rounded-corners transition clearfix grpelem" id="u2075-4" href="tel:0989113376" target="_blank"><!-- content --><p>ЗАПИСАТЬСЯ</p></a>
